@@ -6,18 +6,18 @@ AUX ruby-config-0.3.2-prefix.patch 4093 RMD160 c12414c8234f4f81ba333d7f9e644444f
 MD5 27939d2ebe99675609fd83a295128ce4 files/ruby-config-0.3.2-prefix.patch 4093
 RMD160 c12414c8234f4f81ba333d7f9e644444f1027b33 files/ruby-config-0.3.2-prefix.patch 4093
 SHA256 36b65e112949430fb6ad4567ed1f184e92c666941d44e94c63a6e0f3ed2aa55c files/ruby-config-0.3.2-prefix.patch 4093
-EBUILD ruby-config-0.3.2.ebuild 786 RMD160 266ae4ea73957c03db57fb30fe16aa80cf622ec7 SHA1 3bd9ab1265139b08064afda18e5c5bf45b7b67f9 SHA256 d4eb7adf1216fa61a6235f93992a9b2bc8c0ce6581aa475d4f7ea2731170e592
-MD5 6c60711ec8de7e3cd0f5d98579dd5044 ruby-config-0.3.2.ebuild 786
-RMD160 266ae4ea73957c03db57fb30fe16aa80cf622ec7 ruby-config-0.3.2.ebuild 786
-SHA256 d4eb7adf1216fa61a6235f93992a9b2bc8c0ce6581aa475d4f7ea2731170e592 ruby-config-0.3.2.ebuild 786
-MISC ChangeLog 3942 RMD160 f5f9bbf60072700f8bfcafc1803120fd391c977f SHA1 00e6affb1f7e30f7f994c8d022afb27f8475568a SHA256 b16ea8c458878a87ce406bde13c4fc307d1c188228af0cbe5d5cf848c616d2e8
-MD5 5b48012999fd6beae37ce0a8e061fb0f ChangeLog 3942
-RMD160 f5f9bbf60072700f8bfcafc1803120fd391c977f ChangeLog 3942
-SHA256 b16ea8c458878a87ce406bde13c4fc307d1c188228af0cbe5d5cf848c616d2e8 ChangeLog 3942
+EBUILD ruby-config-0.3.2.ebuild 698 RMD160 44efedb7a585f908a6e44645982da951922adf97 SHA1 b4b6f93799158e31b555781e7cb4802ea29f15ad SHA256 ad1fec3f390783cd5e81bfc3d67a5727a5ce176e6f41422aaa7ae35892c44c2d
+MD5 b2637dfc76614499784a65aeb0ac152b ruby-config-0.3.2.ebuild 698
+RMD160 44efedb7a585f908a6e44645982da951922adf97 ruby-config-0.3.2.ebuild 698
+SHA256 ad1fec3f390783cd5e81bfc3d67a5727a5ce176e6f41422aaa7ae35892c44c2d ruby-config-0.3.2.ebuild 698
+MISC ChangeLog 4046 RMD160 201617358adf4985e5a646096c13305b3c24c503 SHA1 f0248fe6368db4a224b2f12b43fef72ee6ba7f7b SHA256 17fc88b89eb3b3af63562121bd2a21a6ced83661431013afb1a0947fbb2ca307
+MD5 295083ff977330308802291413d1da00 ChangeLog 4046
+RMD160 201617358adf4985e5a646096c13305b3c24c503 ChangeLog 4046
+SHA256 17fc88b89eb3b3af63562121bd2a21a6ced83661431013afb1a0947fbb2ca307 ChangeLog 4046
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
 MD5 3eec9f3fe48b51f49dbc1f171a3b026f metadata.xml 157
 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 metadata.xml 157
 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c metadata.xml 157
-MD5 68b329da9893e34099c7d8ad5cb9c940 files/digest-ruby-config-0.3.2 1
-RMD160 c0da025038ed83c687ddc430da9846ecb97f3998 files/digest-ruby-config-0.3.2 1
-SHA256 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b files/digest-ruby-config-0.3.2 1
+MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-ruby-config-0.3.2 0
+RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-ruby-config-0.3.2 0
+SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-ruby-config-0.3.2 0
